    high score functionality to the Harmony cart flash RAM.

  * Added ability for ROM launcher to 'descend' into ZIP files when it
    contains more than one ROM file.  This means you no longer have to unzip
    a multi-file archive before using each ROM.  Thanks go to Roland
    Schabenberger (webOS maintainer) for this idea and sample code.

  * Fixed several bugs in debugger disassembly:
      - Zero-page code addresses no longer have their high-byte
        truncated, and system equates (TIA and I/O registers) are now
        properly marked as such.
      - The Distella '-r' option (Relocate calls out of address range)
        is no longer the default, resulting in output more consistent
        with normal usage of Distella.

  * Fixed bug in EFSC bankswitch scheme state saving; the Superchip RAM
    wasn't actually being loaded and saved to state files.

  * Improved speed of loading and saving state files, as well as slightly
    reducing their size.  Because of this, old state files will not work
    with this release.

  * Replaced commandline argument 'uselauncher' with 'exitlauncher'.  The
    new option specifies the behaviour of the ROM launcher when exiting
    a ROM (always exit to launcher, or only when the launcher was actually
    used).  This setting can now be changed in the GUI.

  * Several updates to the internal properties database:
      - 'Juno First' ROMs now use an AtariVox/SaveKey when possible
      - 'Astroblast' ROMs now use the paddles by default

  * Changed key-combo for enabling TIA objects and collisions to be
    toggled on and off with the Alt-period and Shift-Alt-period
    respectively (instead of having two separate keys to turn them on
    and off).

  * Updated included PNG library to latest stable version.

-Have fun!


3.6 to 3.6.1: (March 30, 2012)

  * Extended FA2 bankswitch scheme to handle 28K ROMs (in addition to
    the previously supported 24K ROMs).


3.5.5 to 3.6: (March 16, 2012)
