@@ -136,10 +136,11 @@ Settings::Settings(OSystem* osystem)
   setExternal("romloadcount", "0");
   setExternal("maxres", "");
 
-  // Debugger options
-  setInternal("resolvedata", "auto");
-  setInternal("gfxformat", "2");
-  setInternal("showaddr", "true");
+  // Debugger disassembly options
+  setInternal("dis.resolvedata", "auto");
+  setInternal("dis.gfxformat", "2");
+  setInternal("dis.showaddr", "true");
+  setInternal("dis.relocate", "false");
 
   // Thumb ARM emulation options
   setInternal("thumb.trapfatal", "true");
@@ -438,10 +439,13 @@ void Settings::usage()
     << " The following options are meant for developers\n"
     << " Arguments are more fully explained in the manual\n"
     << endl
-    << "   -resolvedata  <never|       Set automatic code vs. data determination in the disassembler\n"
-    << "                  always|auto>\n"
-    << "   -gfxformat    <2|16>        Set base to use for displaying GFX sections in the disassembler\n"
-    << "   -showaddr     <1|0>         Show opcode addresses in the disassembler\n"
+    << "   -dis.resolvedata <never|    Set automatic code vs. data determination in disassembler\n"
+    << "                     always|\n"
+    << "                     auto>\n"
+    << "   -dis.gfxformat   <2|16>     Set base to use for displaying GFX sections in disassembler\n"
+    << "   -dis.showaddr    <1|0>      Show opcode addresses in disassembler\n"
+    << "   -dis.relocate    <1|0>      Relocate calls out of address range in disassembler\n"
+    << endl
     << "   -debuggerres  <WxH>         The resolution to use in debugger mode\n"
     << "   -break        <address>     Set a breakpoint at 'address'\n"
     << "   -debug                      Start in debugger mode\n"
